--- a/app.html
+++ b/app.html
@@ -8,20 +8,36 @@
         </title>
     </head>
      <body>
-        <form>FIRST NAME   :
-            <input type="text" style="colour:green">
-        </form>
-        <form>LAST NAME    :
-            <input type="text">
-        </form>
-        <form>CONTACT      :
-                <input type="text">
-        </form>
-        <button type="button" class="btn btn-primary">ADD</button>
-         <button type="button" class="btn btn-danger">EDIT</button>
-        <button type="button" class="btn btn-success">SAVE</button>
-
+        <table class="table table-bordered"></table>>
+        <table class="table table-borderless">
+                <thead>
+                  <tr>
+                    <th scope="col">First</th>
+                    <th scope="col">Last</th>
+                    <th scope="col">contact</th>
+                  </tr>
+                </thead>
+                <tbody>
+                  <tr>
+                    <td>Harini</td>
+                    <td>S</td>
+                    <td>897548938</td>
+                  </tr>
+                  <tr>
+                    <td>Fouzia</td>
+                    <td>Israth</td>
+                    <td>887646894</td>
+                  </tr>
+                  <tr>
+                        <td>Praveen</td>
+                        <td>Kumar</td>
+                        <td>887646899</td>
+                  </tr>
+                </tbody>
+              </table>
+        </table>
         
+        <a href="///home/naanal-user/Desktop/new%20m/contactpage.html"button type="button" class="btn btn-primary"style="align:center">Create Contact</button>
     </body>
 
 
